# openpower-pnor-code-mgmt

./: .beautysh-ignore  .gitignore  MAINTAINERS  Makefile.am  Makefile.generated.in  OWNERS  README.md  activation.cpp  activation.hpp  configure.ac  download_manager.cpp  download_manager.hpp  download_manager_main.cpp  functions.cpp  functions.hpp  generate-ext4  generate-extended-squashfs  generate-squashfs  generate-squashfs-tarball  generate-tar  generate-ubi  groups  hbb-lid-mmio.cpp  hbb-lid-mmio.service  image_verify.cpp  image_verify.hpp  item_updater.cpp  item_updater.hpp  item_updater_main.cpp  meson.build  meson.options  meson_options.txt  msl_verify.cpp  msl_verify.hpp  msl_verify_main.cpp  op-pnor-msl.service  openpower-pnor-update@.service  org.open_power.Software.Host.Updater.service  org.openbmc.Associations.cpp  process-host-firmware.service  (+13 more)
dbus/: org.open_power.Software.Host.Updater.conf  xyz.openbmc_project.Software.Host.Updater.conf
mmc/: Makefile.am.include  activation_mmc.cpp  activation_mmc.hpp  item_updater_mmc.cpp  item_updater_mmc.hpp  obmc-flash-bios  obmc-flash-bios-init.service  obmc-flash-bios-patch.service  obmc-recover-pnor.service  openpower-bios-factory-reset.service  openpower-process-host-firmware.service  openpower-recover-pnor@service.in  openpower-update-bios-attr-table.service  recover_pnor_files  update-bios-attr-table.service
org/openbmc/Associations/: server.hpp
single-image/: Makefile.am.include  obmc-flash-bios-rmsymlink-ro@.service  obmc-flash-bios-si  obmc-flash-bios-symlink-ro.service  obmc-flash-bios-symlink-ro@.service
static/: Makefile.am.include  activation_static.cpp  activation_static.hpp  item_updater_static.cpp  item_updater_static.hpp  pnor_utils.hpp
test/: Makefile.am  README.md  msl_verify.cpp  test_functions.cpp  test_item_updater_static.cpp  test_signature.cpp  test_version.cpp  utest.cpp
ubi/: Makefile.am.include  activation_ubi.cpp  activation_ubi.hpp  item_updater_ubi.cpp  item_updater_ubi.hpp  obmc-flash-bios  obmc-flash-bios-check-clearvolatile@.service  obmc-flash-bios-cleanup.service  obmc-flash-bios-enable-clearvolatile@.service  obmc-flash-bios-si  obmc-flash-bios-ubiattach.service  obmc-flash-bios-ubimount@.service  obmc-flash-bios-ubipatch.service  obmc-flash-bios-ubiremount.service  obmc-flash-bios-ubisymlink-ro@.service  obmc-flash-bios-ubiumount-ro@.service  obmc-flash-bios-ubiumount-rw@.service  obmc-flash-bios-updatesymlinks.service  serialize.cpp  serialize.hpp  watch.cpp  watch.hpp
vpnor/: Makefile.am.include  obmc-flash-bios-updatesymlinks.service  obmc-flash-bios-vpnor  obmc-vpnor-check-clearvolatile@.service  obmc-vpnor-enable-clearvolatile@.service  obmc-vpnor-updatesymlinks.service  obmc-vpnor-util
