option('tests', type: 'feature', description: 'Build tests.')
option(
    'oe-sdk',
    type: 'feature',
    value: 'disabled',
    description: 'Enable OE SDK',
)
option(
    'device-type',
    type: 'combo',
    choices: ['static', 'ubi', 'mmc'],
    description: 'Select which device type to support',
)
option('vpnor', type: 'feature', description: 'Enable virtual PNOR support')
option('pldm', type: 'feature', description: 'Enable Host PLDM support')
option(
    'verify-signature',
    type: 'feature',
    description: 'Enable image signature validation',
)
option('msl', type: 'string', description: 'Minimum Ship Level')
option(
    'firmware-path',
    type: 'string',
    value: '/media/hostfw/running/',
    description: 'Firmware path',
)
option(
    'firmware-patch-path',
    type: 'string',
    value: '/usr/local/share/hostfw/running/',
    description: 'Firmware patch path',
)
